--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /tmp
 /out-tsc
 /bazel-out
+/angular
+/public
 
 # Node
 /node_modules
@@ -41,3 +43,7 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+
+
+
